# portfolio-project

./: database.py  models.py  skd.md  steps.md
chapter3/: fa  fantasy_data.db
chapter4/: crud.py  main.py  models.py  schemas.py  test_crud.py  test_main.py
chapter5/: requirements.txt
chapter6/: Dockerfile  crud.py  docker_push.md  main.py  readme.md  schemas.py
chapter6/complete/: Dockerfile
chapter7/sdk/: README.md  pyproject.toml
chapter7/sdk/src/swcpy/: swc_client.py  swc_config.py
chapter7/sdk/src/swcpy/schemas/: __init__.py
