



[buid-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swcpy"
version = "0.0.1"

authors = [
    { name="[Gershom Life]"},
]

description = " example sdk from hands-on api book for ai and data science"
requires-python = ">3.10"
classifiers = [
    "Development Status :: 3 - alpha",
    "Programming Language :: MIT License",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'pytest>=8.1',
    'httpx>=0.27.0',
]